<resources>
    <string name="app_name">TMeter</string>
    <string name="title_current_temp">Current Temperature</string>
    <string name="temp_sensor">Sensor</string>
    <string name="temp_battery">Battery Fallback</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="recording_active">Recording Active</string>
    <string name="recording_inactive">Recording Inactive</string>
    <string name="settings">Settings</string>
    <string name="pref_frequency_title">Recording Frequency</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear_data">Clear Logs</string>
</resources>
